# mega-ai

./: .cursorrules  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
evaluations/: harness.py  meta_agent.py  test_cases.json
mega_ai/: main.py
mega_ai/agents/: critique.py  decomposition.py  retrieval.py  synthesis.py
mega_ai/api/: routes.py  sse.py
mega_ai/core/: config.py  exceptions.py  prompts.py  schemas.py
mega_ai/db/: connection.py
mega_ai/db/queries/: init.sql
mega_ai/graph/: orchestrator.py  state.py
mega_ai/memory/: context_manager.py
mega_ai/observability/: tracer.py
mega_ai/tools/: db_lookup.py  e2b_sandbox.py  failure.py  self_reflection.py  web_search.py
tests/: test_agents.py  test_tools.py
