[project]
name = "mega-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.1.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pydantic-ai>=0.0.14",
    "langgraph>=0.2.0",
    "litellm>=1.40.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "tiktoken>=0.7.0",
    "e2b-code-interpreter>=1.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]